<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/input_field_margin"
    android:layout_marginRight="@dimen/input_field_margin"
    android:background="@color/white"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="@dimen/input_field_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"

        android:text="@string/nav_about_us" />
    <TextView
        android:layout_marginTop="@dimen/input_field_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text"
        android:text="@string/ph1" />
    <TextView
        android:layout_marginTop="@dimen/input_field_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text"
        android:text="@string/ph2" />
    <TextView
        android:layout_marginTop="@dimen/input_field_padding"
        android:layout_width="wrap_content"
        android:textSize="@dimen/small_text"
        android:layout_height="wrap_content"
        android:text="@string/ph3" />


</LinearLayout>