<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/input_field_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/input_field_margin"
        android:elevation="@dimen/elevation"
        android:background="@drawable/border"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edAccountHolderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:background="@drawable/border"
            android:elevation="@dimen/elevation"
            android:hint="@string/ed_ac_holder_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="@dimen/input_field_padding"
            android:textSize="@dimen/small_text" />

        <TextView
            android:id="@+id/accountHolderName_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/input_field_margin"
            android:textSize="@dimen/text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:elevation="@dimen/elevation"
            android:padding="@dimen/input_field_padding">

            <Spinner
                android:id="@+id/spinnerBankName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <TextView
            android:id="@+id/bankName_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/input_field_margin"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/edAccountNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:background="@drawable/border"
            android:elevation="@dimen/elevation"
            android:hint="@string/ed_account_no"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="@dimen/input_field_padding"
            android:textSize="@dimen/small_text" />

        <TextView
            android:id="@+id/accountNumber_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/input_field_margin"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/edReEnterAccountNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:background="@drawable/border"
            android:elevation="@dimen/elevation"
            android:hint="@string/ed_re_enter_account_no"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="@dimen/input_field_padding"
            android:textSize="@dimen/small_text" />

        <TextView
            android:id="@+id/reEnterAccountNumber_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/input_field_margin"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/edIFSCCOde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:background="@drawable/border"
            android:elevation="@dimen/elevation"
            android:hint="@string/ed_IFSC"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="@dimen/input_field_padding"
            android:textSize="@dimen/small_text" />

        <TextView
            android:id="@+id/IFSCCode_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/input_field_margin"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/btnBankInfoSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/double_general_padding_margin"
            android:background="@drawable/border"
            android:elevation="@dimen/elevation"
            android:enabled="false"
            android:text="@string/btn_next"
            android:textColor="@color/splash_color" />

    </LinearLayout>

</ScrollView>